kubernetes/apps/home-automation/home-assistant/app/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hass.haynesops.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: home-assistant
          port: 8123
      middlewares:  
        - name: default-headers
          namespace: traefik
  tls:
    secretName: certificate-haynesops
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-code
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hass-code.haynesops.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: home-assistant
          port: 12321
      middlewares:  
        - name: default-headers
          namespace: traefik
  tls:
    secretName: certificate-haynesops
